tests222/tests2/test254.out
lli: <stdin>:1:1: error: expected top-level entity
line 8: function j is not defined
^
